--- a/hugo.yaml
+++ b/hugo.yaml
@@ -23,7 +23,7 @@ title: xuno的小窩
 #         weight: 3
 
 # Change it to your Disqus shortname before using
-disqusShortname: hugo-theme-stack
+disqusShortname: xuno8
 
 # GA Tracking ID
 googleAnalytics: G-MLMJ6MT4V4
